frontend/css/discover.css
@font-face {
  font-family: "Bungee";
  src: url(/fonts/Bungee/Bungee-Regular.ttf);
}

@font-face {
  font-family: "Jersey";
  src: url(/fonts/Jersey_10/Jersey10-Regular.ttf);
}

@font-face {
  font-family: "Macado";
  src: url(/fonts/Supermercado_One/SupermercadoOne-Regular.ttf);
}

@font-face {
  font-family: "Neue";
  src: url(/fonts/Bebas_Neue/BebasNeue-Regular.ttf);
}


* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  width: 100%;
}

header {
  display: flex;
  width: 100%;
  height: 75px;
  background-color: black;
  border-bottom: #780606 solid 1px;
  padding-left: 50px;
  padding-right: 50px;
  align-items: center;
  gap: 600px;
  justify-content: space-between;
}

header nav ul {
  display: flex;
  list-style-type: none;
  gap: 20px;
  align-items: center;
}

header nav ul li a {
  text-decoration: none;
  color: rgb(167, 160, 160);
}

header nav ul #special a {
  padding: 5px 7px;
  background-color: rgb(214, 163, 22);
  color: black;
  border-radius: 5px;
}

header div {
  display: flex;
  gap: 5px;
  height: 40px;
  align-items: center;
}

header nav ul button {
  padding: 5px 10px;
  background-color: rgb(214, 163, 22);
  color: black;
  border-radius: 10px;
  font-family: "neue";
  font-size: 20px;
}

header div p {
  color: rgb(167, 160, 160);
  font-size: 30px;
  font-family: "Bungee";
  margin-left: 5px;
}

header div div {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #780606;
}

#profile {
  background-image: url("../img/movieimg/user.png");
  width: 45px;
  height: 45px;
  display: block;
  background-color: darkred;
  background-repeat: no-repeat;
  background-position: bottom;
  background-size: cover;
  border-radius: 50%;
  background-origin: content-box;
  padding: 10px;
}

#movie-container {
  margin: auto;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  gap: 50px;
  justify-items: center;
  align-items: center;
  max-width: 100%;
}

.moviePic img {
  color: black;
  width: 360px;
  height: 500px;
  margin: auto;
  margin-top: 50px;
  text-decoration: none;
}

.movie p {
  text-align: center;
  background-color: black;
  margin: 0;
  padding: 10px;
  color: white;
  text-decoration: underline;
  text-decoration-color: black;
  font-size: 18px;
  max-width: 3600px;
}

